# claude-code-guide-zh

./: .env.example  .gitignore  .sync-state.json  NOTICE  README.md  fixups.json  glossary.json  llms.txt  pyproject.toml
.github/workflows/: sync.yml
content/: README.md  update-log-zh.md  update-log.md
docs/: ARCHITECTURE.md  FAQ.md
tools/: __init__.py  config.py  fixups.py  markdown_chunker.py  state.py  structured_doc.py  sync.py  translator.py
